--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="./2.jpeg" alt="Image 2" class="gallery-image" data-index="1">
                 <img src="./3.jpeg" alt="Image 3" class="gallery-image" data-index="2">
                 <img src="./9.jpeg" alt="Image 4" class="gallery-image" data-index="6">
-                <img src="./8.jpg" alt="Image 5" class="gallery-image" data-index="6">
+                <img src="./8.jpg" alt="Image 5" class="gallery-image" data-index="6" style="border-radius: 50%;">
                 <img src="./5.jpeg" alt="Image 6" class="gallery-image" data-index="4">
                 <img src="./10.jpg" alt="Image 8" class="gallery-image" data-index="6">
                 <img src="./6.jpeg" alt="Image 7" class="gallery-image" data-index="5">
@@ -39,7 +39,7 @@
             <button class="next-button" id="nextButton">&#10095;</button>
         </div>
     </div>
-    <audio id="profileMusic" src="./music.mp3"></audio>
+    <audio id="profileMusic" src="./music.mp3" loop></audio>
     <script src="script.js"></script>
 </body>
 
